Updates to the manual pages as was done with the primary documentation area. This 2nd sweep completes font tag replacement. [and some tag updates in ManualReportBuilder that I must have missed with revision 8489]

--- a/locale/de_DE.utf8/Manual/ManualARInquiries.html
+++ b/locale/de_DE.utf8/Manual/ManualARInquiries.html
@@ -2,13 +2,13 @@
 
 <!-- Help Begin: CustomerInquiry -->
 
-<a name="ARInquiries"><font size="+3"><b>Debitorenauswertungen</b></font></a>
+<h1><a name="ARInquiries">Debitorenauswertungen</a></h1>
 <br /><br />
-<font size="+2"><b>Kundenauswertungen</b></font>
+<h2>Kundenauswertungen</h2>
 <br /><br />
 Komplette Drill-Down-Auswertungen sind vorhanden, damit alle Angaben der Belege ausgewertet werden können. Das System pflegt mehr Daten, als viele Systeme, vorrangig um die Verwendung von Sammel- oder Stapelbuchungen zu Gunsten der detaillierten Information zu jeder Buchung zu verringern. Die Auswertungen können die Konten-Historie für jeden Kunden anzeigen und von dieser Auswertung ist es möglich, die Einzelheiten zu jeder einzelnen Buchung anzuzeigen, von der Debitorenposition aus ist es möglich, sich die Positionen der Originalrechnung anzuzeigen und welche Zahlungseingänge zugeordnet sind. Die Originalrechnung oder -gutschrift kann direkt aus der Kundenabfrage angesehen werden und die Hauptbuch-Belege, die aus der Rechnung, Gutschrift oder dem Zahlungseingang entstanden sind, können ebenfalls untersucht werden.
 <br /><br />
-<font size="+1"><b>Auswertung des Debitorenkontos</b></font>
+<h3>Auswertung des Debitorenkontos</h3>
 <br /><br />
 Von jeder Seite aus klicken Sie im Menü auf den Link Kundensuche oder drücken Alt-2. Wenn Sie den Kunden ausgewählt haben, werden alle für den Kunden verfügbaren Links angezeigt. Unter ihnen finden Sie auch die Auswertung Kundenbelege.
 <br /><br />
@@ -26,7 +26,7 @@ Mehr (oder weniger) Historie kann angezeigt werden, indem man das Datum des Feld
 <li>Für Rechnungen der Betrag der noch nicht mit Zahlungseingängen und Gutschriften ausgeglichen ist</li>
 <li>Für Zahlungseingänge der Betrag, der noch nicht einer Rechnung zugeordnet wurde.</li>
 </ul>
-<font size="+1"><b>Beleganzeige</b></font>
+<h3>Beleganzeige</h3>
 <br /><br />
 Die Belegangaben können über einen von zwei Wegen aufgerufen werden:
 <br /><br />
