--- a/locale/de_DE.utf8/Manual/ManualHeader.html
+++ b/locale/de_DE.utf8/Manual/ManualHeader.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <basefont face="Verdana, Helvetica, Arial">
-<div align="center"><font size="+4" color="blue"><b><u>webERP Handbuch</u></b></font></div>
-<br><br><br> 
+<div align="center">
+    <h1 style="font-size:300%;text-decoration:underline;color:blue;">webERP Handbuch</h1>
+</div>
+<br /><br /><br /> 
