--- a/locale/de_DE.utf8/Manual/ManualIntroduction.html
+++ b/locale/de_DE.utf8/Manual/ManualIntroduction.html
@@ -1,7 +1,7 @@
 <html><head></head><body><br /><br />
-<a name="Introduction"><font size="+3"><b>Einleitung</b></font></a>
+<h1><a name="Introduction">Einleitung</a></h1>
 <br /><br />
-<font size="+2"><b>Warum noch ein Buchhaltungsprogramm?</b></font>
+<h2>Warum noch ein Buchhaltungsprogramm?</h2>
 <br /><br />
 Die Wirtschaft ändert sich. Sie wird immer dynamischer und geografisch immer verstreuter. Traditionelle Kommunikationsmittel, namentlich das Fax, werden duch die Email ersetzt. Informationen müssen 24 Stunden täglich, 7 Tage in der Woche auf Mausklick über das Internet verfügbar sein. So funktioniert ein modernes Geschäftssystem, das sich an die neuen Bedingungen angepasst hat.
 <br /><br />
