--- a/locale/de_DE.utf8/Manual/ManualPrices.html
+++ b/locale/de_DE.utf8/Manual/ManualPrices.html
@@ -2,13 +2,13 @@
 
 <!-- Help Begin: Prices -->
 
-<a name="Prices"><font size="+3"><b>Preise und Rabatte</b></font></a>
+<h1><a name="Prices">Preise und Rabatte</a></h1>
 <br /><br />
-<font size="+1"><b>Übersicht</b></font>
+<h3>Übersicht</h3>
 <br /><br />
 Preise werden für Umsatzarten und Währungen im System hinterlegt. Wenn ein Kundenstammsatze eingerichtet wird, bekommt der Kunde sowohl eine Umsatzart als auch eine Währung zugeordnet. Da es keine Begrenzung für die Zahl von Umsatzarten gibt, gibt es auch keine Begrenzung in der Zahl unterschiedlicher Preislisten. Eine weitere Flexibilität ist dadurch gegeben, dass wenn erforderlich auch kundenspezifische Preise festgelegt werden können, normalerweise für einen bestimmten Kunden, aber das System hat auch die Möglichkeit, die Preise auf eine bestimmte Kundenniederlassung zu beziehen. Wenn ein Preis als speziell für eine Niederlassung markiert ist, wird er nicht für alle anderen Niederlassungen des Kunden verwendet. Statt dessen wird der allgemeine Preis verwendet. Sie haben weiterhin die Möglichkeit, den Kunden Rabatte zu  gewähren, dies erfolgt durch die Rabattstaffeln (siehe unten). Wenn ein Material zusätzlich einen Rabatt hat, wird dieser zum Zeitpunkt der Auftragserfassung eingegeben. Der Benutzer hat auch die Möglichkeit, bei der Auftragserfassung Preise manuell zu ändern. Die Ergebnisrechnung ermöglicht die Berichterstattung nach Umsatzarten, und darüber ist auch die Möglichkeit gegeben, den Umfang der Geschäfte unter den verschiedenen Preisgestaltungen auszuwerten.
 <br /><br />
-<font size="+1"><b>Preise pflegen</b></font>
+<h3>Preise pflegen</h3>
 <br /><br />
 Um Preise einzupflegen, muss jeweils zuerst das Material ausgewählt werden. Das kann über die Materialsuche oder über Hauptmenü &rarr; Bestandsführung &rarr; Datenpflege &rarr; Materialstamm/Preise ändern/löschen geschehen. Wenn die für ein bestimmtes Material möglichen Bearbeitungsfunktionen angezeigt werden, wählen Sie "Preise pflegen". Die Seite Materialpreise wird angezeigt, die bereits definierten Preise je Umsatzart / Währung werden angezeigt. Die bereits definierten Preise können bearbeitet oder gelöscht und neue Preise können hinzugefügt werden. Es ist nicht möglich, mehrere Einträge für die gleiche Kombination Umsatzart / Währung einzugeben.	
 <br /><br />
@@ -29,7 +29,7 @@ Dieses Skript ermöglicht Massen-Preis-Erhöhungen oder -Verringerungen nach Proze
 </ul>
 Gleichermaßen flexible Optionen existieren für das Ausdrucken der Preislisten über Hauptmenü &rarr; Aufträge &rarr; Auswertung und Berichte &rarr; Preislisten drucken.
 <br /><br />
-<font size="+1"><b>Rabattstaffel</b></font>
+<h3>Rabattstaffel</h3>
 <br /><br />
 Die Rabattstaffeln erlauben Rabatte einzurichten für Mengengrenzen, die über einen Bereich von Materialnummern reichen. Nehmen wir an, eine Firma verkauft Stifte in den Farben Rot, Blau, Schwarz usw. und bietet einen Rabatt bei Bestellungen ab 100 Stück. Das ist möglich, obwohl die einzelnen Farben unter jeweils einer eigenen Materialnummer geführt werden.
 <br /><br />
