--- a/locale/de_DE.utf8/Manual/ManualRequirements.html
+++ b/locale/de_DE.utf8/Manual/ManualRequirements.html
@@ -1,10 +1,10 @@
 <br /><br />
 
-<a name="Requirements"><font size="+3"><b>Anforderungen</b></font></a>
+<h1><a name="Requirements">Anforderungen</a></h1>
 
 <br /><br />
 
-<font size="+2"><b>Hardware-Anforderungen</b></font>
+<h2>Hardware-Anforderungen</h2>
 
 <br /><br />
 Es gibt viele mögliche Konfigurationen, auf denen diese Anwendung laufen kann.
@@ -30,7 +30,7 @@ in der Datenbankgröße und der Zahl der Benutzer auch noch für die meisten
 Unternehmen reichlich bemessen sein.
 <br /><br />
 
-<font size="+2"><b>Software-Anforderungen</b></font>
+<h2>Software-Anforderungen</h2>
 
 <br /><br />
 
