--- a/locale/de_DE.utf8/Manual/ManualSalesTypes.html
+++ b/locale/de_DE.utf8/Manual/ManualSalesTypes.html
@@ -1,5 +1,5 @@
 <br /><br />
-<a name="SalesTypes"><font size="+3"><b>Umsatzarten/Preislisten</b></font></a>
+<h1><a name="SalesTypes">Umsatzarten/Preislisten</a></h1>
 <br /><br />
 Umsatzarten sind große Kategoreien, die die Umsatzerlöse einteilen, sie dürfen nicht mit den Warengruppen werwechselt werden. Ein Modehaus könnte zum Beispiel Umsatzarten haben für:
 <br /><br />
@@ -14,10 +14,10 @@ Die Preisfestlegung kann pro Material, Umsatzart (und Währung) eingerichtet werd
 <br /><br />
 Umsatzarten/Preislisten können im Hauptmenü über Einstellungen &rarr; Debitoren/Kreditoren &rarr; Umsatzarten gepflegt werden.
 <br /><br />
-<font size="+1"><b>Umsatzart-ID</b></font>
+<h3>Umsatzart-ID</h3>
 <br /><br />
 Das ist eine 2 Zeichen lange Abkürzung, die im Kundenstamm mit eingetragen wird. Sie muss gegen die ID anderer Umsatzarten eindeutig sein. Wenn Aufträge erfasst werden, bestimmt die Umsatzart zusammen mit der Währung des Kunden, welche Preisliste zur Anwendung kommt.
 <br /><br />
-<font size="+1"><b>Umsatzart-Bezeichnung</b></font>
+<h3>Umsatzart-Bezeichnung</h3>
 <br /><br />
 Für die Bezeichnung der Umsatzart stehen 20 Zeichen Text zur Verfügung. Dieses Feld wird verwendet, um die Umsatzart/Preisliste, die gegenüber dem Kunden angewendet wird, zu beschreiben.
