--- a/locale/de_DE.utf8/Manual/ManualSecuritySchema.html
+++ b/locale/de_DE.utf8/Manual/ManualSecuritySchema.html
@@ -1,7 +1,6 @@
 <html><head></head><body><br /><br />
-<a name="SecuritySchema"><font size="+3">
-<b>Sicherheitskonzept</b></font></a><br />
-<br />
+<h1><a name="SecuritySchema">Sicherheitskonzept</a></h1>
+<br /><br />
 Das Sicherheitskonzept von webERP besteht aus den folgenden Elementen:
 <ol>
 <li><b>Benutzerkonto</b><br />
