--- a/locale/de_DE.utf8/Manual/ManualSecuritySchemaorig.html
+++ b/locale/de_DE.utf8/Manual/ManualSecuritySchemaorig.html
@@ -1,5 +1,5 @@
 <br /><br />
-<a name="SecuritySchema"><font size="+3"><b>Sicherheitskonzept</b></font></a>
+<h1><a name="SecuritySchema">Sicherheitskonzept</a></h1>
 <br /><br />
 Die mit der Anmeldung eingegebene Kombination Benutzername/Passwort erlaubt es dem System die für den Benutzer gültigen Rechte zu bestimmen. Es kann festgelegt werden, auf welche Seiten ein Benutzer Zugriff haben darf. Jeder Benutzer wird beim Anlegen des Stammsatzes einer Rolle zugeordnet, und die Rolle bestimmt, auf welche Seiten er zugreifen kann.
 <!-- The user name and password combination entered at logon enables the system to identify the permissions appropriate to the user. It is possible to determine and restrict which pages a user should be able to access. Each user is allocated to a Role at the time of the user set up and the role determines which pages they can access. --> 
