--- a/locale/de_DE.utf8/Manual/ManualARReports.html
+++ b/locale/de_DE.utf8/Manual/ManualARReports.html
@@ -1,12 +1,12 @@
 <br /><br />
-<a name="ARReports"><font size="+3"><b>Debitorenberichte</b></font></a>
+<h1><a name="ARReports">Debitorenberichte</a></h1>
 <br /><br />
 Das System ist auf Flexibilität ausgelegt und darauf, einen Rahmen an Kernfunktionalität für die Verwaltung einer Debitorenbuchhaltung anzubieten. Die grundlegenden Debitorenberichte sind als Standard verfügbar, weil sie von allen Unternehmen benötigt werden. Dennoch ist es wegen der offenen Datenbank vorgesehen, das das Unternehmen über ODBC-Treiber auf die Datenbank  mit Crystal Reports oder Microsoft Access oder anderer Auswertungssoftware zugreifen kann, wobei der Nutzer im gleichen Netzwerk ist wie der Server für die spezialisierten Berichte.
 <br /><br /> 
 
 <!-- Help Begin: AgedDebtors -->
 
-<font size="+1"><b>Gerasterte Debitorensalden</b></font>
+<h3>Gerasterte Debitorensalden</h3>
 <br /><br />
 Wählen Sie Hauptmenü &rarr; Debitoren &rarr; Auswertungen und Berichte &rarr; Gerasterte Kundensalden/Fälligkeiten.
 <br /><br />
@@ -28,7 +28,7 @@ Die gerasterten Kundensalden können auch nur auf die Konten beschränkt werden, b
 
 <!-- Help Begin: PrintCustStatements -->
 
-<font size="+1"><b>Kontoauszüge</b></font>
+<h3>Kontoauszüge</h3>
 <br /><br />
 Der Kontoauszug zeigt die offenen Posten auf dem Konto an. Es gibt eine Option in den Systemeinstellungen, die es erlaubt, zusätzlich die im letzten Monat ausgeglichenen Posten in den Auszug mit einzubeziehen. Dies vermeidet es, Nullsalden-Auszüge auszudrucken aber es gibt für beide Möglichkeiten Begründungen, sie für die bessere Möglichkeit anzusehen.
 <br /><br />
@@ -42,7 +42,7 @@ Vorgehen: Alle Zahlungseingänge müssen zugeordnet sein, damit der gerasterte Sal
 
 <!-- Help Begin: CustomerTransInquiry -->
 
-<font size="+1"><b>Auswertung der Kundenvorgänge</b></font>
+<h3>Auswertung der Kundenvorgänge</h3>
 <br /><br />
 Sie erreichen die Auswertung über Hauptmenü &rarr; Debitoren &rarr; Auswertungen und Berichte &rarr; Belegauswertungen.
 <br /><br />
@@ -55,7 +55,7 @@ Die Anzeige erscheint am Bildschirm, kann aber natürlich mit den Mitteln des Bro
 <!-- Help Begin: PrintCustTrans -->
 
 <br /><br />
-<font size="+1"><b>Rechnungen und Gutschriften drucken</b></font>
+<h3>Rechnungen und Gutschriften drucken</h3>
 <br /><br />
 Sie wählen Hauptmenü &rarr; Debitoren &rarr; Auswertungen und Berichte &rarr; Rechnungen und Gutschriften drucken.
 <br /><br />
