--- a/locale/de_DE.utf8/Manual/ManualARTransactions.html
+++ b/locale/de_DE.utf8/Manual/ManualARTransactions.html
@@ -2,17 +2,17 @@
 
 <!-- Help Begin: SelectSalesOrder -->
 
-<a name="ARTransactions"><font size="+3"><b>Debitorenbuchungen</b></font></a>
+<h1><a name="ARTransactions">Debitorenbuchungen</a></h1>
 <br /><br />
-<font size="+2"><b>Fakturieren eines Kundenauftrages</b></font>
+<h2>Fakturieren eines Kundenauftrages</h2>
 <br /><br />
-<font size="+1"><b>Auftrag zum Fakturieren auswählen</b></font>
+<h3>Auftrag zum Fakturieren auswählen</h3>
 <br /><br />
 Jede Fakturierung verlangt, dass zuvor der Kundenauftrag erfasst ist.
 <br /><br />
 Wählen Sie Hauptmenü &rarr; Aufträge &rarr; Vorgänge &rarr; Kundenaufträge ändern. Diese Seite zeigt alle offenen Kundenaufträge. Wenn die Auftragsnummer bekannt ist, können Sie diese auf dem Bild eingeben. Drücken Sie Aufträge/Angebote suchen und der Auftrag sollte darunter angezeigt werden, zusammen mit den Links zum Ändern, Rechnung erstellen und Lieferschein drucken. Drücken Sie den Link Rechnung, um den Auftrag zu fakturieren
 <br /><br />
-<font size="+1"><b>Erstellen der Faktura zum Kundenauftrag</b></font>
+<h3>Erstellen der Faktura zum Kundenauftrag</h3>
 <br /><br />
 Wenn Sie den Kundenauftrag zum Fakturieren ausgewählt haben, erscheinen die Positionen des Auftrages für die Bestätigung der gelieferten Mengen. Wenn die gelieferte Menge von der Auftragsmenge abweicht, wird die Differenz in der Tabelle OrderDeliveryDifferencesLog protokolliert, ein Bericht ist verfügbar, mit dem Aufträge angezeigt werden können, die nicht bei der ersten Lieferung voll beliefert wurden. Es gibt außerdem die Möglichkeit, Frachtkosten und den Steuersatz einzugeben, welcher normalerweise automatisch ermittelt wird. Das Lieferdatum wird abhängig von der Tageszeit und dem Geschäftsschluss in den Systemeinstellungen vorgeschlagen. Wenn die Uhrzeit nach dem eingestellten Geschäftsschluss liegt, ist es der Folgetag, ansonsten wird der heutige Tag vorgeschlagen. Wenn der Auftrag nicht vollständig beliefert wird, haben Sie zwei Möglichkeiten, mit den Differenzen zu verfahren:
 <br /><br />
@@ -38,7 +38,7 @@ Wenn der Auftrag nicht an den Kunden oder seine Niederlassung fakturiert werden 
 
 <!-- Help Begin: SelectCreditItems -->
 
-<font size="+2"><b>Gutschriften</b></font>
+<h2>Gutschriften</h2>
 <br /><br />
 Gutschriften können auf zweierlei Weise angelegt werden:
 <br /><br />
@@ -70,7 +70,7 @@ Die Vorgehensweise für das manuelle Anlegen einer Gutschrift ist:
 
 <!-- Help Begin: CustomerReceipt -->
 
-<font size="+2"><b>Erfassung von Zahlungseingängen</b></font>
+<h2>Erfassung von Zahlungseingängen</h2>
 <br /><br />
 Dieses System verfolgt als Offene-Posten-System die offenen Rechnungen und Gutschriften, im Unterschied zu Systemen, die die Salden vom Vormonat übertragen und die aktuellen Vorgänge addieren oder subrtrahieren. Erfahrung zeigen dass sich bei Saldenvortragssystemen häufig die Frage nach mehr Informationen ergibt, mit der unvermeidlichen Frage von den Kunden, woraus dieser Saldo gebildet wurde. Die Kontoauszüge, die in webERP erstellt werden, zeigen den vollständigen Nachweis der Außenstände auf der Basis der Rechnungen und Gutschriften, die noch zu begleichen sind, und die zusammengenommen den Saldo des Kundenkontos ergeben. Um die erforderlichen Informationen zu den ausstehenden Beträgen zur Verfügung zu stellen, müssen Rechnung für Rechnung sowie die Details der eingeganenen Zahlungen erfasst werden.
 <br /><br />
@@ -90,7 +90,7 @@ Die Erfassung der Zahlungseingänge erreichen Sie Hauptmenü &rarr; Debitoren &rar
 <br /><br />
 Zuerst werden die Kopfinformationen des Zahlungseingangsstapels angefordert, das Bankkonto - eins der vorher definierten Bankkonten (s. Einstellungen), das Buchungsdatum, die Währung und der Umrechnungskurs der Bankbuchung und der Zahlungsweg des Geldeinganges zusammen mit irgendeinem Buchungstext. Die Währung kann von den definierten Währungen vorgewählt werden (s. Einstellungen). Die Arten der Zahlungseingänge können auch ausgewählt werden - sie werden über Hauptmenü &rarr; Einstellungen &rarr; Debitoren/Kreditoren &rarr; Zahlungswege  definiert. Sobald diese Informationen eingetragen sind, müssen diese übernommen werden, bevor die Zahlungen des Stapels eingetragen werden können.
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Debitor</b></font>
+<h3>Zahlungseingang - Debitor</h3>
 <br /><br /> 
 Normalerweise werden, sobald der Kunde ausgewählt worden ist, die folgenden Informationen angezeigt:
 <br /><br />
@@ -99,14 +99,14 @@ Normalerweise werden, sobald der Kunde ausgewählt worden ist, die folgenden Info
 <li>Der anwendbare Skontoprozentsatz. Der Benutzer kann diesen Prozentsatz dann verwenden, um den anwendbaren Skonto zu errechnen, abhängig davon, welcher Anteil der Zahlung sich auf Rechnungen innerhalb der Skontolinie bezieht.</li>
 <li>Die Währung, in der die Zahlung geleistet wird.</li>
 </ul>
-<font size="+1"><b>Zahlungseingang - Datum</b></font>
+<h3>Zahlungseingang - Datum</h3>
 <br /><br />
 Das Datum, zu dem die Zahlung empfangen und gebucht wurde.  Wenn ein Zahlungseingang nachträglich erfasst wird - oder Buchungen verschiedener Tage zusammen erfasst werden, sollte das Vorgabedatum (d.h. das Tagesdatum) mit dem Datum überschrieben werden, zu dem der Zahlungseingang ursprünglich empfangen wurde.  Dieses Datum wird auf dem Kontoauszug verwendet und der Kunde kann möglicherweise nicht in der Lage sein, die Zahlung nachzuvollziehen, wenn ein falsches Datum eingetragen wird. 
 <br /><br />
 Die Kundenkontoanfragen werden in der Datumsreihenfolge angezeigt, also wird das Konto nicht richtig dargestellt, wenn das eingegebene Datum nicht das Datum ist, an dem das Geld empfangen wurde.  Das Datum wird auch im angelegten Hauptbuchhaltungsbeleg benutzt. 
 used in the general ledger transaction created.
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Währung und Umrechnungskurs</b></font>
+<h3>Zahlungseingang - Währung und Umrechnungskurs</h3>
 <br /><br />
 Die Vorauswahl des Kunden erklärt dem System automatisch, in welcher Währung der Zahlungseingang erwartet wird. Das Kundenkonto wird in der Währung geführt, die bei der Kundenstammdatenpflege ausgewählt wird.  
 <br /><br />
@@ -120,21 +120,21 @@ Die Hauswährung, die durch das System errechnet wird sollte bestätigen, daß der 
 <br /><br />
 Wenn der Zahlungseingang mit den Rechnungen ausgeglichen wird, werden mögliche Unterschiede zwischen den Zahlbetrag in Hauswährung und dem Rechnungsbetrag in Hauswährung ermittelt und auf das in den Unternehmenseistellungen hinterlegte GuV-Konto gebucht, wenn die Hauptbuchintegration in den Unternehmenseinstellungen aktiviert ist	.
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Zahlweg</b></font>
+<h3>Zahlungseingang - Zahlweg</h3>
 <br /><br />
 Der Zahlungsweg wird im Zahlungseingang gespeichert und auf dem Kontoauszug des Kunden darstellt.  Ein Bankbuchungsbericht kann ausgeführt werden auf der Grundlage des Zahlungsweges, um die Bankbuchungen des Tages zusammenzufassen und so die Aufgabe des Sortierens der unterschiedlichen Beleg und die Zusammenstellung für die Bank zu automatisieren. 
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Betrag</b></font>
+<h3>Zahlungseingang - Betrag</h3>
 <br /><br />
 Der Betrag des Zahlungseinganges in der ausländischen Währung wird hier eingetragen. Der Betrag kann nicht 0 sein.  Es sind jedoch negative Beträge erlaubt (um falsche Zahlungseingänge zu stornieren). 
 <br /><br />
  Anmerkung:  Es sollte besondere Vorsicht angewendet werden, wenn man die negativen Beträge zuordnet, um sicherzugehen, daß nur vorhergehende Ausgleiche aufgehoben werden. Es könnte zu merkwürdigen Ergebnissen führen, wenn Zuordnungen zu Rechnungen vorgenommen werden, die nicht vorher mit positiven Zahlungseingängen ausgeglichen wurden, obwohl natürlich die Systemintegrität erhalten bleibt. 
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Skonto</b></font>
+<h3>Zahlungseingang - Skonto</h3>
 <br /><br />
 Der Skontobetrag zu einem Zahlungseingang kann an dieser Stelle eingetragen werden und zusammen mit dem eingegangenen Betrag als eine Summe zugeordnet werden. Dieses ist nützlich, wenn ein Kunde entsprechend seinen Zahlungsbedingungen Skonto zieht und der eingegangene Betrag allein nicht ausreicht, um die gebuchte Forderung auszugleichen. Das System errechnet den Gesamtbetrag der Zahlung zuzüglich des Skontos, um den Sollbetrag der Rechnung zu erreichen.
 <br /><br />
-<font size="+1"><b>Zahlungseingang - Ausgleichen mit der Rechnung</b></font>
+<h3>Zahlungseingang - Ausgleichen mit der Rechnung</h3>
 <br /><br />
 Sobald alle notwendigen Angaben für den Zahlungseingang erfasst worden sind - den Kunden, den Kurs und den Betrag in der ausländischen Währung, der Zahlungseingang ist bereit für die Zuordnung der Rechnungen, für die die Zahlung bestimmt ist. 
 <br /><br />
@@ -148,7 +148,7 @@ Beachten Sie, dass keine Zuordnung eines Zahlungseinganges zu einem anderen Zahl
 <br /><br />
 Wenn der Gesamtbetrag des Zahlungseinganges nicht nicht mit den (zugeordneten) Rechnungen und Habenbuchungen aufgeht, fragt das System nach, um sicherzugehen, dass das auch beabsichtigt wurde. Anders als bei viele Systemen können Zuordnungen später jederzeit ergänzt oder korrigiert werden. 
 <br /><br />
-<font size="+1"><b>Kursdifferenzen</b></font>
+<h3>Kursdifferenzen</h3>
 <br /><br />
 Der Prozess der Zuordnung der Zahlungseingänge zu den Rechnungen gibt dem System die Informationen, die notwendig sind um die Kursdifferenzen zu bestimmen, wenn der in Hauswährung umgerechnete Zahlungseingang zu einem anderen Wert führt als das Hauswährungsäquivalent der Rechnungen, mit der er ausgeglichen wird, es sei denn, der Zahlungseingang und die Rechnungen wurden zum selben Kurs umgerechnet. 
 <br /><br />
@@ -156,13 +156,13 @@ Die Kursdifferenzen, die zum Zeitpunkt des Ausgleiches errechnet werden, können 
 <br /><br />
 Änderungen zu den Zuordnungen ändern natürlich die Kursdifferenzen.  Die Hauptbuchschnittstelle erzeugt jedesmal Buchungen für die Änderung der Kursdifferenzen wenn eine Zuordnung geändert wird.
 <br /><br />
-<font size="+1"><b>Zahlungseingänge verbuchen</b></font>
+<h3>Zahlungseingänge verbuchen</h3>
 <br /><br />
 Es können viele Zahlungseingänge von Kunden hintereinander erfasst werden oder gemischt mit anderen Geldeingängen eingegeben werden, z. B. für Maschinenverkäufe aus dem Anlagevermögen oder für die private Nutzung von Wirtschaftsgütern. Sobald alle Zahlungseingänge erfasst worden sind, kann die Verarbeitung stattfinden. Das System speichert nun die Daten, die für den Zahlungseingang bis zum Drücken dieser Taste zwischengespeichert wurden. 
 <br /><br />
 Die Verarbeitung gibt dem Stapel der Zahlungseingänge eine Nummer, fügt neue Zahlungseingangspositionen zum Debitorenkonto hinzu und aktualisiert den Stammsatz des Kunden mit dem Datum und dem Betrag der letzten Zahlung. Zusätzlich werden, wenn die Hauptbuchschnittstelle aktiv ist, die Belege zum Buchen des Zahlungseinganges auf das Bankkonto und das Verringern der Forderung auf dem Sammelkonto, das in den Unternehmenseinstellungen angegeben ist, erzeugt.  Hauptbuchbuchungen werden auch für den Skonto gegen das Sammelkonto für Forderungen erzeugt.  Alle erforderlichen Kontonummern müssen in die Unternehmenseinstellungen unter Hauptmenü &rarr; Einstellungen &rarr; Allgemeines und dem Bankkonto eingerichtet werden werden, die auf der gleichen Seite eingerichtet werden. 
 <br /><br />
-<font size="+1"><b>Liste der Zahlungseingänge</b></font>
+<h3>Liste der Zahlungseingänge</h3>
 <br /><br />
 Nachdem die Verarbeitung durchgeführt wurde, wird ein Link zum Drucken des Stapels der erfassten Zahlungseingänge angezeigt.  Die Belegnummer wird auch berichtet. Die Auflistung zeigt die Informationen, die von Banken für die Verarbeitung eines Scheckstapels benötigt werden.  Diese Liste kann über Hauptmenü &rarr; Debitoren &rarr; Auswertungen jederzeit neugedruckt werden - Reports und Anfragen. 
 
@@ -172,7 +172,7 @@ Nachdem die Verarbeitung durchgeführt wurde, wird ein Link zum Drucken des Stape
 
 <!-- Help Begin: CustomerAllocations -->
 
-<font size="+2"><b>Habenbeträge dem Debitorenkonto zuordnen</b></font> 
+<h2>Habenbeträge dem Debitorenkonto zuordnen</h2> 
 <br /><br />
 Diese Option steht zur Verfügung um Habenpositionen -  seien es Zahlungseingänge oder auch Gutschriften - den Sollpositonen aus den Rechnungen zuzuordnen. Bereits früher zugeordnete Habenpositionen stehen bei Bedarf für eine Änderung ihrer Zuordnung zur Verfügung. Es gibt zwei Möglichkeiten, diese Funktion auszuführen:
 <br /><br />
