--- a/locale/de_DE.utf8/Manual/ManualSalesOrders.html
+++ b/locale/de_DE.utf8/Manual/ManualSalesOrders.html
@@ -1,7 +1,7 @@
 <br /><br />
-<a name="SalesOrders"><font size="+3"><b>Kundenaufträge</b></font></a>
+<h1><a name="SalesOrders">Kundenaufträge</a></h1>
 <br /><br />
-<font size="+2"><b>Funktionalität</b></font>
+<h2>Funktionalität</h2>
 <br /><br />
 <ul>
 <li>Kundenaufträge können erfasst und bearbeitet und über die Kundenauftragsnummer angegeben werden.</li>
@@ -21,15 +21,15 @@
 
 <!-- Help Begin: SelectOrderItems -->
 
-<font size="+2"><b>Kundenaufträge erfassen</b></font>
+<h2>Kundenaufträge erfassen</h2>
 <br /><br />
 Sie wählen Hauptmenü &rarr; Aufträge &rarr; Vorgänge &rarr; Auftrag anlegen.
 <br /><br />
-<font size="+1"><b>Auswahl des Kunden und der Niederlassung</b></font>
+<h3>Auswahl des Kunden und der Niederlassung</h3>
 <br /><br />
 Zum Anfang zeigt die Seite zur Auftragserfassung Suchfelder für die Auswahl des Kunden und seiner Niederlassung. Der Kunde ist das Konto, auf das der Auftrag berechnet werden soll und die Niederlassung enthält alle Angaben über die Belieferung. Die Auswahl ist vergleichbar mit der Kundensuche, aber es werden nur solche Niederlassungen angezeigt, für die im Stammsatz Aufträge erlaubt sind. Die Suche kann entweder über Zeichenfolgen zur Kundennummer oder Teile zum Kundennamen erfolgen. Durch eine solche Suche wird die Anzahl der zurückgegebenen Datensätze minimiert, um die Ausgaben möglichs schnell (besonders bei einer Wählverbindung) an den Benutzer zurückzugeben. Alle auf die Suchkriterien passenden, für Aufträge erlaubten Niederlassungen werden mit jeweils einer Drucktaste zurüclgegeben. Durch das Drücken der Taste für die gewünschte Kundenniederlassung wird diese für die Erfassung des Kundenauftrages ausgewählt. Es gibt später noch die Möglichkeit, Lieferdetails abzuändern. Der Bildschirm zeigt nun die Schnellerfassung, überschrieben mit dem Namen des Kunden und der Niederlassung und der Umsatzart des Kunden.
 <br /><br />
-<font size="+1"><b>Auswahl der Kundenauftragspositionen</b></font>
+<h3>Auswahl der Kundenauftragspositionen</h3>
 <br /><br />
 Es gibt zwei Möglichkeiten, die Einzelposten für einen Auftrag auszuwählen.
 <br /><br />
@@ -49,7 +49,7 @@ Der Kunde kann auch noch gewechselt werden, die Taste dazu erreichen Sie über di
 <br /><br />
 Wenn Sie alle Positionen ausgewählt haben, müssen Sie die Taste "Lieferangaben übernehmen" anklicken. Beachten Sie, dass bisher noch keinerlei Daten in die Datenbank geschrieben wurden, sie sind bisher nur temporär auf dem Server abgelegt. Die Lieferangaben müssen zunächst bestätigt werden, bevor der Auftrag gesichert werden kann.
 <br /><br />
-<font size="+1"><b>Lieferangaben</b></font>
+<h3>Lieferangaben</h3>
 <br /><br />
 Normalerweise werden die Lieferangaben aus der Straßenadresse der Kundenniederlassung übernommen. Sie haben jedoch die Möglichkeit, diese Informationen auf diesem Bild zu überschreiben. Die Informationen werden auf dem Lifernschein und der Rechnung ausgedruckt.
 <br /><br />
@@ -69,7 +69,7 @@ Wenn alle Angaben korrekt erfasst wurden, muss die Taste "Auftrag sichern" angek
 
 <!-- Help Begin: SelectSalesOrder -->
 
-<font size="+1"><b>Kundenauftrag ändern</b></font>
+<h3>Kundenauftrag ändern</h3>
 <br /><br />
 Nur offene Kundenaufträge können geänder werden. Nur diese haben irgendwelche Mengen die noch zu beliefern und zu fakturieren sind. Auch können Auftragspositionen, die bereits vollständig fakturiert sind, nicht mehr geändert werden. Dem Auftrag können keine neuen Positionen hinzugefügt werden. Wenn eine Teilmenge der Position bereits geliefert/fakturiert ist, kann auch der Preis nicht mehr geändert werden. Mengen können nicht unter die bereits gelieferte Menge reduziert werden.
 <br /><br />
@@ -91,7 +91,7 @@ Die angezeigten Aufträge haben jeweils Links zum Bearbeiten der Auftragsposition
 <!-- Help End: SelectSalesOrder -->
 
 <!-- Help Begin: Quotations -->
-<font size="+1"><b>Angebote</b></font>
+<h3>Angebote</h3>
 <br /><br />
 Ein Angebot kann auf die gleiche Weise erfasst werden, wie ein Kundenauftrag. Sie kennzeichen es erst als Angebot, wenn Sie auf dem Bild Lieferangaben ganz unten "nur Angebot" auswählen. Wenn dieses Kennzeichen gesetzt ist, können Sie ein PDF-Angebot erstellen, das Sie an den Kunden senden. Wenn diese Option ausgewählt ist, wird in der Auswertung Bestandsstatus auch kein Bedarf reserviert. Angebote können Sie auf dem Bild "Offene Kundenaufträge suchen" aufrufen, indem Sie "Nur Angebote" auswählen. In diesem Falle bekommen Sie nur Angebote angezeigt. Mit dem Link zum Bearbeiten, können Sie das Angebot ändern und wenn sich der Kunde entscheidet, zum Kundenauftrag umwandeln. Außerdem gibt es einen Link, mit dem Sie das Angebot nochmals drucken können. 
 <br /><br />
@@ -100,7 +100,7 @@ Wenn Sie ein Angebot zum Kundenauftrag geändert haben, ist die weitere Bearbeitu
 <!-- Help End: Quotations -->
 
 <!-- Help Begin: RecurringSalesOrder -->
-<font size="+1"><b>Daueraufträge</b></font>
+<h3>Daueraufträge</h3>
 <br /><br />
 Aufträge können als mit einer bestimmten Periodizität wiederkehrend erfasst werden:
 <ul>
