--- a/locale/de_DE.utf8/Manual/ManualSystemConventions.html
+++ b/locale/de_DE.utf8/Manual/ManualSystemConventions.html
@@ -1,13 +1,13 @@
 <br /><br />
-<a name="SystemConventions"><font size="+3"><b>System-Gepflogenheiten</b></font></a>
+<h1><a name="SystemConventions">System-Gepflogenheiten</a></h1>
 <br /><br />
-<font size="+2"><b>Navigation im Menü</b></font>
+<h2>Navigation im Menü</h2>
 <br /><br />
 Das System baut auf einem Hauptbildschirm auf, von dem alle Funktionen erreicht werden können, in den meisten Fällen ohne auf verschiedene Menüebenen zurückgreifen zu müssen. Die Menüs sind als Register ausgelegt, wobei der Benutzer den Oberbegriff der Objekte auswählt, auf die er zugreifen will: Kundenaufträge, Debitoren, Kreditoren, Einkauf, Bestandsführung, Produktion, Hauptbuch und Einstellungen. Die verfügbaren Optionen sind eingeteilt in Vorgänge, Auswertungen und Berichte sowie Datenpflege. Die bedeutsamen Funktionen werden jeweils darunter angezeigt. Es ist nur ein einfacher Klick auf den Text der jeweiligen Funktion erforderlich, um sie unverzüglich zu starten.
 <br /><br />
 Zusätzlich zu diesem Hauptmenü zeigen alle Bildschirme Links zur Kundensuche, Materialsuche und Lieferantensuche. Diese Links führen den Benutzer direkt zu den Selektionsformularen, und sobald eine Auswahl vorgenommen wurde, werden die Optionen für einen bestimmten Kunden, ein bestimmtes Material oder einen bestimmten Lieferanten angezeigt und können direkt durch einen Link aus diesen Untermenüs angesprungen werden. In den meisten Fällen erfordert eine Auswertung oder ein Vorgang wenigstens eines dieser drei Merkmale und die Links auf diesen Suchergebnissen gestatten die meisten Funktionen mit minimaler Navigation aufzurufen.
 <br /><br />
-<font size="+2"><b>Berichtswesen</b></font>
+<h2>Berichtswesen</h2>
 <br /><br />
 Alle Bildschirme und Abfragen können direkt vom Browserfenster ausgedruckt werden. Das Format des Ausdruckes ist browserabhängig unterschiedlich. Die meisten Browser bieten eine gewisse Flexibilität an.
 <br /><br />
