Layout improvements, new css and buttons

--- a/reportwriter/forms/FormsFilter.html
+++ b/reportwriter/forms/FormsFilter.html
@@ -8,8 +8,8 @@
   <input name="FormFilter" type="hidden" value="1" />
   <table align="center" width="550" border="1" cellspacing="1" cellpadding="1">
 	<tr>
-      <td colspan="2"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
-	  <td colspan="2"><div align="right"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_EXPPDF; ?>" /></div></td>
+      <td colspan="2"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_CANCEL; ?></button></td>
+	  <td colspan="2"><div align="right"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_EXPPDF; ?></button></div></td>
     </tr>
 	<tr>
 		<td colspan="4"><div align="center"><?php echo RPT_CRITERIA; ?></div></td>
