--- a/reportwriter/admin/forms/ReportsHome.html
+++ b/reportwriter/admin/forms/ReportsHome.html
@@ -1,24 +1,24 @@
 <h2 align="center"><?php echo $FormParams['heading']; ?></h2>
 <form name="reporthome" method="post" action="ReportCreator.php?action=step2">
-	<input type="hidden" name="FormID" value="<?php echo $_SESSION['FormID']; ?>" />
-  <table align="center"  border="0" cellspacing="0" cellpadding="0">
+<input type="hidden" name="FormID" value="<?php echo $_SESSION['FormID']; ?>" />
+  <table class="selection" cellspacing="0" cellpadding="0">
    <tr>
       <td>
-	 	<table border="1">
+	 	<table class="selection">
 			<?php echo $DropDownString; ?>
 		</table>
 	  </td>
       <td valign="top">
-	  	<table>
+	  	<table class="selection">
 		  <tr>
 			<td><p>&nbsp;</p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_ADDNEW; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_EDIT; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_RENAME; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_DEL; ?>" onClick="return confirm('<?php echo RPT_REPDEL; ?>')" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_IMPORT; ?>" /></p>
-				<p><input name="todo" type="submit" value="<?php echo RPT_BTN_EXPORT; ?>" /></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_ADDNEW; ?>" /><?php echo RPT_BTN_ADDNEW; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EDIT; ?>" /><?php echo RPT_BTN_EDIT; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_RENAME; ?>" /><?php echo RPT_BTN_RENAME; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>" /><?php echo RPT_BTN_COPY; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_DEL; ?>" onClick="return confirm('<?php echo RPT_REPDEL; ?>')" /><?php echo RPT_BTN_DEL; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_IMPORT; ?>" /><?php echo RPT_BTN_IMPORT; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EXPORT; ?>" /><?php echo RPT_BTN_EXPORT; ?></button></p>
 			</td>
 		  </tr>
 		</table>
