--- a/reportwriter/forms/FormsList.html
+++ b/reportwriter/forms/FormsList.html
@@ -7,9 +7,9 @@
 		<tr bgcolor="#CCCCCC"><td colspan="3" align="center"><?php echo RPT_FORMOUTPUT; ?></td></tr>
 		<?php echo $OutputString; ?>
 		<tr>
-		  <td width="33%"><input type="submit" name="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
-		  <td width="33%" align="center"><input type="submit" name="todo" value="<?php echo RPT_BTN_CRIT; ?>" /></td>
-		  <td width="33%" align="right"><input type="submit" name="todo" value="<?php echo RPT_BTN_EXPPDF; ?>" /></td>
+		  <td width="33%"><button type="submit" name="todo"><?php echo RPT_BTN_CANCEL; ?></button></td>
+		  <td width="33%" align="center"><button type="submit" name="todo"><?php echo RPT_BTN_CRIT; ?></button></td>
+		  <td width="33%" align="right"><button type="submit" name="todo"><?php echo RPT_BTN_EXPPDF; ?></td>
 		</tr>
   </table>
 </form>
