--- a/reportwriter/forms/TplFrmLine.html
+++ b/reportwriter/forms/TplFrmLine.html
@@ -11,9 +11,9 @@
 	<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
   <table align="center" width="550"  border="0" cellspacing="0" cellpadding="0">
     <tr>
-      <td><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_CANCEL; ?>" /></td>
-      <td><div align="center"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_UPDATE; ?>" /></div></td>
-      <td><div align="right"><input name="todo" type="submit" id="todo" value="<?php echo RPT_BTN_FINISH; ?>" /></div></td>
+      <td><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_CANCEL; ?></button></td>
+      <td><div align="center"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_UPDATE; ?></button></div></td>
+      <td><div align="right"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_FINISH; ?></button></div></td>
     </tr>
   </table>
   <table align="center" border="2" cellspacing="1" cellpadding="1">
