Minor correction with button tag elements.

--- a/reportwriter/forms/ReportsFilter.html
+++ b/reportwriter/forms/ReportsFilter.html
@@ -17,7 +17,7 @@
 	  <?php } else echo '<td width="20%">&nbsp;</td>'; ?>
 	  <td><div align="center"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_CPYRPT; ?></button></div></td>
       <td width="20%"><div align="center"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_EXPCSV; ?></button></div></td>
-	  <td width="20%"><div align="right"><button name="todo" type="submit" id="todo"<?php echo RPT_BTN_EXPPDF; ?></div></td>
+	  <td width="20%"><div align="right"><button name="todo" type="submit" id="todo"><?php echo RPT_BTN_EXPPDF; ?></button></div></td>
     </tr>
   </table>
   <table width="100%" border="1" cellspacing="1" cellpadding="1">
