--- a/reportwriter/admin/forms/ReportsHome.html
+++ b/reportwriter/admin/forms/ReportsHome.html
@@ -12,13 +12,13 @@
 	  	<table class="selection">
 		  <tr>
 			<td><p>&nbsp;</p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_ADDNEW; ?>" /><?php echo RPT_BTN_ADDNEW; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EDIT; ?>" /><?php echo RPT_BTN_EDIT; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_RENAME; ?>" /><?php echo RPT_BTN_RENAME; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>" /><?php echo RPT_BTN_COPY; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_DEL; ?>" onClick="return confirm('<?php echo RPT_REPDEL; ?>')" /><?php echo RPT_BTN_DEL; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_IMPORT; ?>" /><?php echo RPT_BTN_IMPORT; ?></button></p>
-				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EXPORT; ?>" /><?php echo RPT_BTN_EXPORT; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_ADDNEW; ?>"><?php echo RPT_BTN_ADDNEW; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EDIT; ?>"><?php echo RPT_BTN_EDIT; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_RENAME; ?>"><?php echo RPT_BTN_RENAME; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_COPY; ?>"><?php echo RPT_BTN_COPY; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_DEL; ?>" onClick="return confirm('<?php echo RPT_REPDEL; ?>')"><?php echo RPT_BTN_DEL; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_IMPORT; ?>"><?php echo RPT_BTN_IMPORT; ?></button></p>
+				<p><button name="todo" type="submit" value="<?php echo RPT_BTN_EXPORT; ?>"><?php echo RPT_BTN_EXPORT; ?></button></p>
 			</td>
 		  </tr>
 		</table>
