Add closing button tag.

--- a/reportwriter/forms/FormsList.html
+++ b/reportwriter/forms/FormsList.html
@@ -9,7 +9,7 @@
 		<tr>
 		  <td width="33%"><button type="submit" name="todo"><?php echo RPT_BTN_CANCEL; ?></button></td>
 		  <td width="33%" align="center"><button type="submit" name="todo"><?php echo RPT_BTN_CRIT; ?></button></td>
-		  <td width="33%" align="right"><button type="submit" name="todo"><?php echo RPT_BTN_EXPPDF; ?></td>
+		  <td width="33%" align="right"><button type="submit" name="todo"><?php echo RPT_BTN_EXPPDF; ?></button></td>
 		</tr>
   </table>
 </form>
