Add missing quote for value property.

--- a/reportwriter/admin/forms/ReportsCritSetup.html
+++ b/reportwriter/admin/forms/ReportsCritSetup.html
@@ -128,7 +128,7 @@
 				<form name="CritFieldForm" method="post" action="ReportCreator.php?action=step7">
 	<input type="hidden" name="FormID" value="<?php echo $_SESSION['FormID']; ?>" />
 				<input name="ReportID" type="hidden" value="<?php echo $ReportID ?>" />
-				<input name="Type" type="hidden" value="<?php echo $Type; ?> />
+				<input name="Type" type="hidden" value="<?php echo $Type; ?>" />
 				<input name="ReportName" type="hidden" value="<?php echo $reportname; ?>" />
 				<input name="EntryType" type="hidden" value="grouplist" />
 				<input name="SeqNum" type="hidden" value="<?php echo $FieldDetails['seqnum'] ?>" />
